--- a/private_dot_newsboat/config
+++ b/private_dot_newsboat/config
@@ -20,9 +20,9 @@ bind-key U show-urls
 bind-key x pb-delete
 
 color listnormal cyan default
-color listfocus black yellow standout bold
 color listnormal_unread yellow default bold
-color listfocus_unread yellow default bold
+color listfocus black cyan standout bold
+color listfocus_unread red default bold
 color info red black bold
 color article white default bold
 
