--- a/private_dot_config/nvim/coc-settings.json
+++ b/private_dot_config/nvim/coc-settings.json
@@ -1,6 +1,10 @@
 {
-    "python.jediEnabled": true
-
+    "python.jediEnabled": true,
+    "coc.preferences.extensionUpdateCheck": "never",
+    "Lua.workspace.library": {
+        "/usr/share/lua/5.4": true,
+        "lib/lua/5.4": true
+    }
 
 
 }
